# innerscope

./: .flake8  .gitattributes  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  conftest.py  pyproject.toml  setup.cfg  setup.py  versioneer.py
.github/workflows/: lint.yml  pypi.yml  test.yml  test_pip.yml
innerscope/: __init__.py  _version.py  cfg.py  core.py
innerscope/tests/: conftest.py  test_core.py  test_repr.py
